Colab을 통해 생성됨

--- a/python_변수기초20250307.ipynb
+++ b/python_변수기초20250307.ipynb
@@ -23,16 +23,28 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sscc37/ABCD-A/blob/main/python_%EB%B3%80%EC%88%98%EA%B8%B0%EC%B4%8820250307.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sscc37/ABCD-A/blob/20250307/python_%EB%B3%80%EC%88%98%EA%B8%B0%EC%B4%8820250307.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "yh-8P4h3ER2_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yh-8P4h3ER2_",
+        "outputId": "cf6a4d47-01c7-43eb-d454-5430ffd14656"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "변수기초\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"변수기초\")\n"
       ]
